# intent-recognizer

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  common.h  console.cpp  console.h  main.cpp  recognizer.cpp  recognizer.h  repository.h  stopword.file  test.cpp  wordmean.file  wordroot.file
